--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
+    "date-fns": "^3.6.0",
+    "next": "14.2.1",
     "react": "^18",
+    "react-big-calendar": "^1.11.3",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.2.1",
+    "typescript": "^5"
   }
 }
