--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
@@ -18,10 +19,8 @@
     "@fullcalendar/timegrid": "^6.1.11",
     "babel-plugin-styled-components": "^2.1.4",
     "date-fns": "^3.6.0",
-    "moment": "^2.30.1",
     "next": "14.2.1",
     "react": "^18",
-    "react-big-calendar": "^1.11.3",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "styled-components": "^6.1.8"
@@ -29,7 +28,6 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
