--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
-		"strict": true,
+		"strict": false,
 		"noEmit": true,
+		"noImplicitAny": false,
+		"strictNullChecks": false,
 		"esModuleInterop": true,
 		"module": "esnext",
 		"moduleResolution": "bundler",
