--- a/package.json
+++ b/package.json
@@ -1,43 +1,50 @@
 {
-  "name": "salon-scheduler",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@date-io/date-fns": "^3.0.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
-    "@fullcalendar/resource": "^6.1.11",
-    "@fullcalendar/timegrid": "^6.1.11",
-    "date-fns": "^3.6.0",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18",
-    "react-query": "^3.39.3"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "typescript": "^5"
-  }
+	"name": "salon-scheduler",
+	"version": "0.1.0",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest",
+		"test:watch": "jest --watch"
+	},
+	"dependencies": {
+		"@date-io/date-fns": "^3.0.0",
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-regular-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@fullcalendar/core": "^6.1.11",
+		"@fullcalendar/daygrid": "^6.1.11",
+		"@fullcalendar/interaction": "^6.1.11",
+		"@fullcalendar/react": "^6.1.11",
+		"@fullcalendar/resource": "^6.1.11",
+		"@fullcalendar/timegrid": "^6.1.11",
+		"date-fns": "^3.6.0",
+		"next": "14.2.1",
+		"react": "^18",
+		"react-day-picker": "^8.10.0",
+		"react-dom": "^18",
+		"react-query": "^3.39.3"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.24.4",
+		"@babel/preset-env": "^7.24.4",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^15.0.2",
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.1",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.1.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.5"
+	}
 }
