--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
 		"date-fns": "^3.6.0",
 		"next": "14.2.1",
 		"react": "^18",
-		"react-day-picker": "^8.10.0",
+		"react-datepicker": "^6.9.0",
 		"react-dom": "^18",
-		"react-query": "^3.39.3"
+		"react-query": "^3.39.3",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.24.4",
