Update package name and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "salon-scheduler",
-	"version": "0.1.0",
+	"name": "yu-calendar",
+	"version": "1.0",
 	"type": "module",
 	"private": true,
 	"scripts": {
