--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.24.4",
-		"@babel/preset-env": "^7.24.4",
 		"@testing-library/jest-dom": "^6.4.2",
 		"@testing-library/react": "^15.0.2",
 		"@types/jest": "^29.5.12",
@@ -42,6 +40,8 @@
 		"@types/react": "^18",
 		"@types/react-datepicker": "^6.2.0",
 		"@types/react-dom": "^18",
+		"@typescript-eslint/eslint-plugin": "^7.9.0",
+		"@typescript-eslint/parser": "^7.2.0",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.1",
 		"jest": "^29.7.0",
