Update DateState interface to use type alias

--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
 		"@fullcalendar/resource": "^6.1.11",
 		"@fullcalendar/timegrid": "^6.1.11",
 		"date-fns": "^3.6.0",
-		"next": "14.2.1",
-		"react": "^18",
+		"next": "^14.3.0-canary.43",
+		"or": "^0.2.0",
+		"react": "^18.3.1",
 		"react-datepicker": "^6.9.0",
-		"react-dom": "^18",
+		"react-dom": "^18.3.1",
 		"react-query": "^3.39.3",
 		"zustand": "^4.5.2"
 	},
