--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-datepicker": "^6.9.0",
 		"react-dom": "^18.3.1",
 		"react-query": "^3.39.3",
+		"uuid": "^10.0.0",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
