--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
+		"@axe-core/react": "^4.9.1",
 		"@testing-library/jest-dom": "^6.4.2",
 		"@testing-library/react": "^15.0.2",
 		"@types/jest": "^29.5.12",
