--- a/packages/yu-calendar/package.json
+++ b/packages/yu-calendar/package.json
@@ -12,43 +12,21 @@
 		"test:watch": "jest --watch"
 	},
 	"dependencies": {
-		"@date-io/date-fns": "^3.0.0",
-		"@fortawesome/fontawesome-svg-core": "^6.5.2",
-		"@fortawesome/free-brands-svg-icons": "^6.5.2",
-		"@fortawesome/free-regular-svg-icons": "^6.5.2",
-		"@fortawesome/free-solid-svg-icons": "^6.5.2",
-		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@fullcalendar/core": "^6.1.14",
 		"@fullcalendar/daygrid": "^6.1.14",
 		"@fullcalendar/interaction": "^6.1.14",
 		"@fullcalendar/react": "^6.1.14",
 		"@fullcalendar/timegrid": "^6.1.14",
 		"@supabase/supabase-js": "^2.43.4",
-		"date-fns": "^3.6.0",
-		"next": "^14.3.0-canary.43",
+		"next": "^14.2",
 		"react": "^18.3.1",
-		"react-datepicker": "^6.9.0",
 		"react-dom": "^18.3.1",
-		"react-query": "^3.39.3",
-		"uuid": "^10.0.0",
-		"zustand": "^4.5.2"
+		"react-datepicker": "^6.9.0",
+		"@types/react-datepicker": "^6.2.0"
 	},
 	"devDependencies": {
-		"@axe-core/react": "^4.9.1",
-		"@testing-library/jest-dom": "^6.4.2",
-		"@testing-library/react": "^15.0.2",
-		"@types/jest": "^29.5.12",
-		"@types/node": "^20",
 		"@types/react": "^18",
-		"@types/react-datepicker": "^6.2.0",
-		"@types/react-dom": "^18",
-		"@typescript-eslint/eslint-plugin": "^7.9.0",
-		"@typescript-eslint/parser": "^7.2.0",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.1",
-		"jest": "^29.7.0",
-		"ts-jest": "^29.1.2",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
+		"@types/react-dom": "^18"
+		
 	}
 }
