--- a/packages/yu-calendar/tsconfig.json
+++ b/packages/yu-calendar/tsconfig.json
@@ -20,8 +20,9 @@
 				"name": "next"
 			}
 		],
+		"baseUrl": "./src",
 		"paths": {
-			"@/*": ["./src/*"]
+			"@/*": ["./*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
