--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
 	"name": "yu-verse",
 	"private": true,
-	"workspaces": [
-		"packages/*"
-	],
 	"scripts": {
 		"yu-calendar": "pnpm --filter yu-calendar",
 		"yu-books": "pnpm --filter yu-books",
@@ -11,6 +8,9 @@
 		"test:watch": "jest --watch"
 	},
 	"devDependencies": {
+		"next": "^14.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"turbo": "^1.2.3",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.1",
@@ -18,6 +18,8 @@
 		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
 		"@typescript-eslint/eslint-plugin": "^7.9.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"@testing-library/jest-dom": "^6.4.2",
