--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
 	"pipeline": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": ["dist/**"]
+			"outputs": [".next/**"]
 		},
 		"dev": {
 			"cache": false
