Chore: upgrade Turbo version 2.x

--- a/turbo.json
+++ b/turbo.json
@@ -1,17 +1,21 @@
 {
-	"pipeline": {
-		"build": {
-			"dependsOn": ["^build"],
-			"outputs": [".next/**"]
-		},
-		"dev": {
-			"cache": false
-		},
-		"lint": {
-			"outputs": []
-		},
-		"test": {
-			"outputs": []
-		}
-	}
+  "tasks": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        ".next/**"
+      ]
+    },
+    "dev": {
+      "cache": false
+    },
+    "lint": {
+      "outputs": []
+    },
+    "test": {
+      "outputs": []
+    }
+  }
 }
