--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-	"name": "yu-verse",
-	"private": true,
-	"scripts": {
-		"yu-calendar": "pnpm --filter yu-calendar",
-		"yu-books": "pnpm --filter yu-books",
-		"test": "jest",
-		"test:watch": "jest --watch"
-	},
-	"devDependencies": {
-		"next": "^14.2",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"turbo": "^1.2.3",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.1",
-		"jest": "^29.7.0",
-		"ts-jest": "^29.1.2",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"@typescript-eslint/eslint-plugin": "^7.9.0",
-		"@typescript-eslint/parser": "^7.2.0",
-		"@testing-library/jest-dom": "^6.4.2",
-		"@testing-library/react": "^15.0.2",
-		"@types/jest": "^29.5.12",
-		"@types/node": "^20"
-	},
-	"dependencies": {
-		"zustand": "^4.5.2",
-		"date-fns": "^3.6.0",
-		"@date-io/date-fns": "^3.0.0",
-		"uuid": "^10.0.0",
-		"@axe-core/react": "^4.9.1",
-		"@fortawesome/fontawesome-svg-core": "^6.5.2",
-		"@fortawesome/free-brands-svg-icons": "^6.5.2",
-		"@fortawesome/free-regular-svg-icons": "^6.5.2",
-		"@fortawesome/free-solid-svg-icons": "^6.5.2",
-		"@fortawesome/react-fontawesome": "^0.2.0"
-	}
+  "name": "yu-verse",
+  "private": true,
+  "scripts": {
+    "yu-calendar": "pnpm --filter yu-calendar",
+    "yu-books": "pnpm --filter yu-books",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.1",
+    "jest": "^29.7.0",
+    "next": "^14.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "turbo": "^2.1.2",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@axe-core/react": "^4.9.1",
+    "@date-io/date-fns": "^3.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "date-fns": "^3.6.0",
+    "uuid": "^10.0.0",
+    "zustand": "^4.5.2"
+  },
+  "packageManager": "pnpm@9.5.0"
 }
