--- a/packages/yu-calendar/package.json
+++ b/packages/yu-calendar/package.json
@@ -17,9 +17,9 @@
 		"@fullcalendar/interaction": "^6.1.14",
 		"@fullcalendar/react": "^6.1.14",
 		"@fullcalendar/timegrid": "^6.1.14",
-		"@supabase/supabase-js": "^2.43.4",
-		"react-datepicker": "^6.9.0",
-		"@types/react-datepicker": "^6.2.0"
+		"@supabase/ssr": "^0.5.1",
+		"@supabase/supabase-js": "^2.45.4",
+		"@types/react-datepicker": "^6.2.0",
+		"react-datepicker": "^6.9.0"
 	}
-	
 }
