--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.2"
   },
