--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "scripts": {
     "yu-calendar": "pnpm --filter yu-calendar",
     "yu-books": "pnpm --filter yu-books",
-	"build": "pnpm build:all",
+    "build": "pnpm build:all",
     "build:all": "pnpm --filter yu-calendar build && pnpm --filter yu-books build",
     "build:calendar": "pnpm --filter yu-calendar build",
     "build:books": "pnpm --filter yu-books build",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "pnpm -r test",
+    "test:watch": "jest --watch",
+    "test:e2e:books": "playwright test --project yu-books",
+    "test:e2e:calendar": "playwright test --project yu-calendar"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
     "@types/jest": "^29.5.12",
@@ -23,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "jest": "^29.7.0",
+    "jest-watch-typeahead": "^3.0.1",
     "next": "^14.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
