Refactor: tsconfig Base Config 도입 및 Jest 설정 정리
- tsconfig.base.json 생성 (공통 TypeScript 설정 통합)
- 루트 tsconfig.json을 base 상속 구조로 변경
- yu-books, yu-calendar tsconfig에 extends 추가 및 중복 설정 제거
- 루트 jest.config.js 제거 (각 패키지 독립 실행)
- yu-calendar jest moduleNameMapper @/* 전체 경로로 확장

--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,16 @@
 /coverage
 
 # next.js
-/.next/
-/out/
+**/.next/
+**/out/
 
 # production
-/build
+**/build
 
 # misc
 .DS_Store
 *.pem
+debug*.png
 
 # debug
 npm-debug.log*
